Fixes #2218 Long size text overlap the check-marks

--- a/webcompat/static/css/src/form.css
+++ b/webcompat/static/css/src/form.css
@@ -75,7 +75,7 @@
 .text-field {
   display: block;
   width: 100%;
-  padding: 4px 0;
+  padding: 4px 25px 4px 0;
   border: none;
   border-bottom: 1px solid var(--color-form);
   position: relative;
